--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: aranym
 Section: otherosfs
 Priority: optional
-Maintainer: Antonin Kral <A.Kral@sh.cvut.cz>
+Maintainer: John Paul Adrian Glaubitz <glaubitz@physik.fu-berlin.de>
 Homepage: http://aranym.org/
 Standards-Version: 4.1.3
 Build-Depends: debhelper (>= 9), dpkg-dev (>= 1.16.1~), autotools-dev, bzip2, libsdl1.2-dev, libsdl-image1.2-dev, libmpfr-dev, libusb-1.0-0-dev [!hurd-i386], imagemagick, quilt
