--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: aranym
 Section: otherosfs
 Priority: optional
 Maintainer: John Paul Adrian Glaubitz <glaubitz@physik.fu-berlin.de>
-Homepage: http://aranym.org/
+Homepage: https://aranym.github.io
 Standards-Version: 4.1.3
 Build-Depends: debhelper-compat (= 12), dpkg-dev (>= 1.16.1~), autotools-dev, bzip2, libsdl1.2-dev, libsdl-image1.2-dev, libmpfr-dev, libusb-1.0-0-dev [!hurd-i386], imagemagick, quilt
 
